name:          hcomedi
version:       0.1
homepage:      http://github.com/ImAlsoGreg/hcomedi
description:
    Bindings for comedilib linux input/output card drivers
category:      Hardware
license:       GPL-3
license-file:  LICENSE
author:        Greg Hale
maintainer:    imalsogreg@gmail.com
cabal-version: >= 1.8
build-type:    Simple

library
  exposed-modules:  System.HComedi
                   ,System.HComedi.Types
                   ,System.HComedi.Handle
                   ,System.HComedi.Units
                   ,System.HComedi.Command
                   ,System.HComedi.Produce
  build-depends:    base >= 4.3 && <= 4.7
                   ,containers >= 0.5.4 && < 0.5.5
                   ,vector >= 0.10.9 && < 0.10.10
                   ,time >= 1.4.1 && < 1.4.2
                   ,pipes >= 4.0 && < 4.2
  extra-libraries:  comedi
  hs-source-dirs:   src
  other-modules:    System.HComedi.ComediBase
  ghc-options:      -threaded -O2

executable tut1
  main-is:          tut1.hs
  hs-source-dirs:   examples, src/System
  build-depends:    base >= 4 && <= 5 
                    , hcomedi

executable tut2
  main-is:          tut2.hs
  hs-source-dirs:   examples, src/System
  build-depends:    base >= 4 && <= 5
                    , hcomedi

executable tut3
  main-is:          tut3.hs
  hs-source-dirs:   examples, src/System
  build-depends:    base >= 4 && <= 5
                    , hcomedi
  ghc-options:      -threaded -O2

executable tmp
  main-is:          tmp.hs
  hs-source-dirs:   examples, src/System
  build-depends:    base >= 4 && <= 5
                    , hcomedi